Enhanced multithreading, concurrency patterns, coding interview questions, and network security sections